--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 quarkus.http.port=8080
 
-# quarkus.hibernate-orm.database.generation=update
-# quarkus.datasource.db-kind=postgresql 
-# quarkus.datasource.username=postgres
-# quarkus.datasource.password=postgres
+quarkus.hibernate-orm.database.generation=update
+quarkus.datasource.db-kind=postgresql 
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
 
-# quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/mydatabase
-# quarkus.datasource.jdbc.max-size=16
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.jdbc.max-size=16
 
 
-# url is used connecting the DB in a springBoot application 
-spring.datasource.url=jdbc:postgresql://localhost:5435/observability-demo-tables
-spring.datasource.username=observability-demo-user
-spring.datasource.password=observability123
-# entity is mapping with DB , then update that data 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
-spring.jpa.properties.hibernate.format_sql=true
+## url is used connecting the DB in a springBoot application 
+# spring.datasource.url=jdbc:postgresql://localhost:5435/observability-demo-tables
+# spring.datasource.username=observability-demo-user
+# spring.datasource.password=observability123
+# # entity is mapping with DB , then update that data 
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+# spring.jpa.properties.hibernate.format_sql=true
